# CSS_DataScience_2025

./: .gitignore  README.md  pyproject.toml
Session1/: 1_1_Introduction.ipynb  1_2_Scraping.ipynb  1_3_Forecasting_Professions.ipynb  2_1_Forecasting_Professions.ipynb
Session2/: 01_document_loading 1.ipynb  02_document_splitting.ipynb  1_3_Forecasting_Professions.ipynb  2_1_BIS_Scraper_I.ipynb  2_1_BIS_Scraper_II.ipynb  2_1_Forecasting_Professions.ipynb  2_2_BIS_Scraper_I.ipynb  2_2_BIS_Scraper_II.ipynb  2_2_Document_Loading.ipynb  2_2_RAG_I_Document_Loading.ipynb  2_3_Document_Splitting.ipynb  2_3_RAG_II_Document_Splitting.ipynb  2_3_RAG_I_Document_Loading.ipynb  2_4_RAG_II_Document_Splitting.ipynb
Session2/docs/youtube/: Barack Obama - SUCCESSFUL People Had FAILURES ｜ Inspirational Speech (Motivational Video 2022 (4K)).m4a  English Speech ｜ All About Me.m4a
Session3/: 3_1_RAG_III_Vectorstores_And_Embeddings.ipynb  3_2_RAG_IV_Full_Pipeline.ipynb  3_2_RAG_IV_Retrieval.ipynb  3_2_RAG_V_Full_Pipeline.ipynb  3_3_LLM_I_Intro.ipynb  3_3_RAG_V_Question-Answering.ipynb  3_4_Download_LLM.ipynb  3_4_LLM_II_Function_Calling.ipynb  3_4_LLM_I_Download.ipynb  3_4_LLM_I_Intro.ipynb  3_4_LLMs_I_Intro.ipynb  3_5_LLM_Download_(Extra).ipynb  3_5_LLM_Download_(Extra).ipynb.ipynb  3_5_LLM_II_Download.ipynb  3_5_LLM_II_Function_Calling.ipynb  3_6_LLM_Download_(Extra).ipynb.ipynb  3_6_LLM_III_Function_Calling.ipynb
