[project]
name = "css-datascience-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "jesusvillota",email = "jesus.villota@cemfi.edu.es"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "numpy",
    "jupyter",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "tensorflow",
    "pillow",
    "selenium",
    "PyPDF2",
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "pypdf",
    "bertviz",
    "pydantic",
    "python-dotenv",
    "yt-dlp (>=2025.8.27,<2026.0.0)",
    "faster-whisper (>=1.2.0,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "tiktoken (>=0.11.0,<0.12.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
