[project]
name = "css-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "jesusvillota",email = "jesus.villota@cemfi.edu.es"}
]
readme = "README.md"
requires-python = ">=3.11 <3.13"
dependencies = [
    "yt-dlp (>=2025.8.27,<2026.0.0)",
    "faster-whisper (>=1.2.0,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "tensorflow (>=2.13.0,<2.16.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "bertviz (>=1.4.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "chromadb (>=1.0.20,<2.0.0)",
    "openai (>=1.102.0,<2.0.0)",
    "groq (>=0.31.0,<0.32.0)",
    "huggingface-hub (>=0.34.4,<0.35.0)",
    "transformers (>=4.55.4,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
